--- a/index.html
+++ b/index.html
@@ -10,25 +10,28 @@
   <body>
     <header>
         <div class="header">
+            <div class="logo">
             <img src="../odin-website/svg/autodesk-1.svg" alt="logo"/>
+            <p>aviato</p>
+            </div>
             <ul>
-                <li><a href="#">Header link one</a></li>
-                <li><a href="#">Header link two</a></li>
-                <li><a href="#">Header link three</a></li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
         <div class="header2">
             <div class="text">
-                <h1>This Website is awesome</h1>
-                <p>Fusce ut finibus libero, in pulvinar purus. Mauris id interdum nunc. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed mattis risus tincidunt nisl finibus, id pretium ante feugiat. Phasellus mollis hendrerit faucibus.</p>
+                <h1>This website is awesome</h1>
+                <p>Fusce ut finibus libero, in pulvinar purus. Mauris id interdum nunc. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
                 <button class="sign-up">Sign up</button>
             </div>
-            <img src="../odin-website/svg/about-our-team-1.svg"/>
+            <img class="img1" src="../odin-website/svg/about-our-team-1.svg"/>
         </div>
     </header>
     
     <div class="body">
-        <h2>Some random information</h2>
+        <h2>Some random information.</h2>
         <div class="img-info">
             <div class="img">
                 <img src="../odin-website/svg/online-test-2.svg">
@@ -58,7 +61,7 @@
                 <p class="alert-text1">Call to action! It's time!</p>
                 <p class="alert-text2">Sign up for our product by clicking that button right over there!</p>
             </div>
-            <button sign-up 2>Sign up</button>
+            <button class="sign-up-two">Sign up</button>
         </div>
 
         <div class="footer">
